# brewery

./: .gitignore  CAN-protocol.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-analyzer.toml  rust-toolchain.toml
.cargo/: config.toml
crates/controller/: Cargo.toml  build.rs  esp_config.yml
crates/controller/src/: can_tasks.rs  main.rs  wifi.rs
crates/core/: Cargo.toml
crates/core/src/: can_protocol.rs  lib.rs
crates/test-can-devices/: Cargo.toml
crates/test-can-devices/src/: main.rs
