[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/controller",
    "crates/test-can-devices",
]

[workspace.dependencies]
brewtech-core = { path = "crates/core" }

# ── esp-hal ecosystem ────────────────────────────────────────────────────────
# All pinned to the same monorepo commit so they are guaranteed compatible.
# Chip feature (esp32c3 / esp32c6) is NOT set at workspace level — each crate
# specifies its own chip so sim crates (C3) and main (C6) don't conflict.
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d", features = ["embassy"] }
esp-println  = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d", features = ["log-04"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
# esp-radio is the renamed esp-wifi; lives in the same monorepo as esp-hal.
# default-features = false so each crate can opt in to chip + wifi features.
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d", default-features = false }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }

# ── Embassy runtime ──────────────────────────────────────────────────────────
# Pinned to a commit compatible with esp-rtos's embassy feature.
# Do NOT add platform-* or arch-* features — esp-rtos provides its own pender.
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef", features = ["nightly"] }
embassy-time     = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-sync     = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-net      = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef", features = ["dhcpv4", "medium-ethernet", "tcp"] }

# ── Utilities ────────────────────────────────────────────────────────────────
log               = "0.4"
heapless          = { version = "0.8", default-features = false }
static_cell       = { version = "2" }
critical-section  = { version = "1" }
embedded-io-async = "0.7"
embedded-can      = "0.4"
minimq            = { version = "0.12.0", default-features = false }
embassy-futures   = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }

# ── Transitive dep redirects ──────────────────────────────────────────────────
# Redirect any crates.io pulls (from within esp-hal/embassy's own Cargo.tomls)
# to the same pinned commits so the resolver never mixes sources.
[patch.crates-io]
esp-hal                = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-hal-procmacros     = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-rtos               = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-println            = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-backtrace          = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-rom-sys            = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-riscv-rt           = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-sync               = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-config             = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-metadata           = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-alloc              = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-radio              = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-radio-rtos-driver  = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
esp-phy                = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0c42fd92c7d0e4ed8c8e4f18630b93bcb33b3e6d" }
embassy-executor         = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-time             = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-sync             = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-time-driver      = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-futures          = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-embedded-hal     = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-net              = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
embassy-net-driver       = { git = "https://github.com/embassy-rs/embassy.git", rev = "414780f2f635594d0b9b0d343ed22dfcb69f70ef" }
